data/derived/fa15/progs/unify/prog1572.ml.out
Characters 65-81:
  | front::back -> ([listReverse back] ::[front]);;
                     ^^^^^^^^^^^^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list list
